Fixed ssl and https

--- a/Src/Prosumer/Login.html
+++ b/Src/Prosumer/Login.html
@@ -9,7 +9,7 @@
 		function login(uname, pwd) {
 			$.ajax({
                 type: 'post',
-                url: 'http://54.162.94.111:3000/user/login',
+                url: 'https://52.91.104.26:3000/user/login',
                 data: {username: uname, password: pwd},
                 dataType: 'json',
                 error: function (data) {
