--- a/Src/Prosumer/public/SignUp.html
+++ b/Src/Prosumer/public/SignUp.html
@@ -9,14 +9,14 @@
 		function signup(uname, pwd, nme) {
 			$.ajax({
                 type: 'post',
-                url: 'http://54.162.94.111:3000/user/signup',
+                url: 'https://52.91.104.26:3000/user/signup',
                 data: {username: uname, password: pwd, name: nme},
                 dataType: 'text',
                 error: function (data) {
                     console.debug(data);
                 },
                 success: function (json) {
-                    window.location.replace('http://54.162.94.111:7000');
+                    window.location.replace('https://52.91.104.26:443');
                 }
             });
 		}
@@ -24,7 +24,7 @@
 			signup(document.getElementById("username").value, document.getElementById("password").value, document.getElementById("name").value);
 		}
         function cancel(){
-            window.location.replace('http://54.162.94.111:7000');
+            window.location.replace('https://52.91.104.26:443');
         }
 	</script>
 
