--- a/Src/Prosumer/public/Manager.html
+++ b/Src/Prosumer/public/Manager.html
@@ -616,8 +616,8 @@
                 </div>
 
             <div class="container" id="submit">
-                <p id="text">Choose a profile picture with the image button, then upload it by pressing the upload button.</p>
-                <input type="file" id="file" name="file" class="inputfile"/>
+                <p id="text">Choose a profile picture with the image button (please choose a png or jpeg file), then upload it by pressing the upload button.</p>
+                <input type="file" id="file" name="file" class="inputfile" accept="image/x-png,image/jpeg"/>
                 <label class="button" for="file">Image</label>
                 <button class="button" type="submit" onclick="upload()">Upload</button>
             </div> 
