--- a/Src/Prosumer/public/Prosumer.html
+++ b/Src/Prosumer/public/Prosumer.html
@@ -391,8 +391,8 @@
                 <input class="input" type="number" value=0 id="buy" min="0" max="100" required onkeydown="return false">
         	</div>
         	<div class="container" id="submit">
-                <p id="text">Choose an image of your house with the image button, then upload it by pressing the upload button.</p>
-            	<input type="file" id="file" name="file" class="inputfile"/>
+                <p id="text">Choose an image of your house with the image button (please choose a png or jpeg file), then upload it by pressing the upload button.</p>
+            	<input type="file" id="file" name="file" class="inputfile" accept="image/x-png,image/jpeg"/>
                 <label class="button" for="file">Image</label>
                 <button class="button" type="submit" onclick="upload()">Upload</button>
         	</div> 
